--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,10 @@
         />
       </noscript>
       <!-- End Facebook Pixel Code -->
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="igx-typography">
   <app-root>Loading...</app-root>
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
