--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
       <!-- End Facebook Pixel Code -->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
 <body class="igx-typography">
   <app-root>Loading...</app-root>
